--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ addons:
     notification_email: 490436312@qq.com
     build_command_prepend: "./configure"
     build_command: "make"
-    branch_pattern: coverity_scan
+    branch_pattern: master
 
 
 script: make
